--- a/mpp-csharp-stolniceanudenisa-final/mpp-csharp-stolniceanudenisa-final.csproj
+++ b/mpp-csharp-stolniceanudenisa-final/mpp-csharp-stolniceanudenisa-final.csproj
@@ -13,6 +13,7 @@
         <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
         <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
@@ -41,12 +42,36 @@
         <Reference Include="System.Configuration" />
         <Reference Include="System.Core"/>
         <Reference Include="System.Data"/>
+        <Reference Include="System.Data.SQLite, Version=1.0.118.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=X86">
+          <HintPath>..\packages\System.Data.SQLite.x86.1.0.118.0\lib\net46\System.Data.SQLite.dll</HintPath>
+        </Reference>
         <Reference Include="System.Web" />
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="ConnectionUtils\ConnectionFactory.cs" />
+        <Compile Include="ConnectionUtils\SqliteConnectionFactory.cs" />
+        <Compile Include="database\BookingDbRepository.cs" />
+        <Compile Include="database\ClientDbRepository.cs" />
+        <Compile Include="database\DBUtils.cs" />
+        <Compile Include="database\FlightDbRepository.cs" />
+        <Compile Include="database\UserDbRepository.cs" />
+        <Compile Include="model\Booking.cs" />
+        <Compile Include="model\Client.cs" />
+        <Compile Include="model\Entity.cs" />
+        <Compile Include="model\Flight.cs" />
+        <Compile Include="model\User.cs" />
+        <Compile Include="persistence\IBookingRepository.cs" />
+        <Compile Include="persistence\IClientRepository.cs" />
+        <Compile Include="persistence\IFlightRepository.cs" />
+        <Compile Include="persistence\IRepository.cs" />
+        <Compile Include="persistence\IUserRepository.cs" />
         <Compile Include="Program.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="validators\FlightValidator.cs" />
+        <Compile Include="validators\IValidator.cs" />
+        <Compile Include="validators\UserValidator.cs" />
+        <Compile Include="validators\ValidationException.cs" />
     </ItemGroup>
     <ItemGroup>
       <None Include="App.Config" />
